--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -1,31 +1,25 @@
 {% extends '_layouts/base.njk' %}
 
-{% block page_title %}New index page title{% endblock %}
+{% block page_title %}Home{% endblock %}
 
 {% block content %}
 
 <div class="container">
   <div class="row">
     <div class="col">
-    <h1>Main headline</h1>
-    <p class="author">By {% for author in authors %}
-      <a href="{{ author.link }}" target="_blank">{{ author.name }}</a>{% if not loop.last %}{% if loop.revindex0 == 1 %} and {% else %}, {% endif %}{% endif %} {% endfor %}
-      <br> Published {{ publish_date }}
-    </p>
+    <h1></h1>
+    <p class="author">By Marie Christine Taylor
+      <p> Queen were one of the longest-lasting and most commercially successful bands to emerge from the British heavy rock scene of the early 1970s, but unlike their contemporaries such as Led Zeppelin, Deep Purple and Black Sabbath, they soon became just as popular with pop fans as fans of hard rock and heavy metal, beginning with "Killer Queen" from their third album "Sheer Heart Attack" in 1974.
+
+      Formed in London in 1970 following the demise of the band Smile, Queen originally consisted of vocalist Freddie Mercury, guitarist Brian May and drummer Roger Taylor before being joined by bassist John Deacon. The band became popular with audiences via their hit singles, live performances, originality and showmanship, being voted the greatest British band of all time in a national BBC poll. Their Live Aid (1985) performance was voted the best live rock performance of all time in an industry poll. According to the BBC, Queen have sold more than 300 million albums as of 2009.
+
+      Queen's first album "Queen" was a commercial flop in 1973, failing to chart and producing no hit single, but their second album "Queen II" produced a top ten hit, "Seven Seas of Rhye". It was with the release of "Sheer Heart Attack" in 1974 and "A Night at the Opera" the following year that the band gained international success. They have released fifteen studio albums, five live albums and numerous compilation albums. Since Mercury's death and Deacon's retirement, May and Taylor have performed infrequently together at special events and programs as members of other ensembles. Between 2004 to 2009 the duo collaborated with Paul Rodgers under the moniker Queen + Paul Rodgers, and between 2011 to 2015 with Adam Lambert under the moniker Queen + Adam Lambert. </p>
+
+      <p> Source: IMBD </p>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <p>
-        Lucas ipsum dolor <a href="detail-page.html">link to detail-page.html</a> amidala sith dooku solo moff organa obi-wan windu. Gamorrean binks wedge darth. Mon darth mon kit ponda solo. Moff watto ackbar mothma moff anakin. Lando skywalker lars fett calrissian lars organa. Organa kenobi wedge darth jawa skywalker anakin. Twi'lek kit darth calamari lando kamino droid. Darth jawa fett grievous maul. Palpatine obi-wan leia tusken raider dagobah. Twi'lek qui-gon boba antilles yoda thrawn. Wampa luuke wampa skywalker. Moff ponda ackbar dagobah kit lobot jinn solo.
-      </p>
-      <ul> 
-        {% for book in data.books %}
-          <li>{{ book.title }}, {{ book.author }}</li>
-        {% else %}
-          <li>This would display if the 'books' collection were empty</li>
-        {% endfor %}
-     </ul>
     </div>
   </div>
 </div>
