Final Project Wed

--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -19,9 +19,9 @@
   </div>
     </div>
 </div>
-<section>
+
   {% for member in data.members %}
-  <div class="card-deck">
+  <div class="card-group">
     <div class="card sm-dark text-white">
       <img src="../img/members/{{ member.imagebw }}" class="card-img" alt="...">
       <div class="card-img-overlay">
