Final Project Thurs

--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -18,19 +18,22 @@
       <p> Source: IMBD </p>
   </div>
     </div>
-</div>
 
+<div class="row">
   {% for member in data.members %}
-  <div class="card-group">
-    <div class="card sm-dark text-white">
+    <div class="card sm-dark text-white col-sm-6">
       <img src="../img/members/{{ member.imagebw }}" class="card-img" alt="...">
       <div class="card-img-overlay">
         <h5 class="card-title">{{ member.name }}</h5>
       </div>
     </div>
-  </div> 
-  </div>
+{% endfor %} 
 </div>
+</div>
+{% endblock %}   
 
-{% endfor %}
-{% endblock %}
+
+
+
+
+
