--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -4,11 +4,17 @@
 <article class="container">
   <div class="row">
     <div class="col-sm-4 left-rail">
-      {% block info %}{% endblock %}
+      {% block info %}
+      <h1>{{ members.name }}</h1>
+      <h2>{{ members.instruments }}</h2>
+      <h3>{{ members.birthdate }}</h3> 
+      <h4>{{ members.birthplace }}</h4>
+
+      <p>{{ members.text}}</p>
+      {% endblock %}
     </div>
     <div class="col-sm-8">
       {% block story %}{% endblock %}
-
     </div>
   </div>
 </article>
