Final Project Fri

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -4,3 +4,13 @@
   margin-bottom: 0px;
   background-color: black;
 }
+
+.navbar-brand {
+  font-family: 'Syncopate', sans-serif;
+  color: white;
+}
+
+#navbarNavAltMarkup {
+  color: white;
+
+}
