--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -3,7 +3,7 @@
 {% block content %}
 <article class="container">
   <div class="row">
-    <div class="col-sm-4 left-rail">
+    <div class="col-sm-7 left-rail">
       {% block info %}
       <h1>{{ members.name }}</h1>
       <h2>{{ members.instruments }}</h2>
@@ -13,8 +13,10 @@
       <p>{{ members.text}}</p>
       {% endblock %}
     </div>
-    <div class="col-sm-8">
-      {% block story %}{% endblock %}
+    <div class="col-sm-5">
+      {% block story %}
+      <img src="../img/members/{{ member.image }}">
+      {% endblock %}
     </div>
   </div>
 </article>
