Final Project Fri Night

--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -21,13 +21,29 @@
 
 <div class="row">
   {% for member in data.members %}
-    <div class="card sm-dark text-white col-sm-6">
+    <div class="card sm-dark text-white w-25">
       <img src="../img/members/{{ member.imagebw }}" class="card-img" alt="...">
       <div class="card-img-overlay">
         <h5 class="card-title">{{ member.name }}</h5>
+          <div class ="text-left">
+          <a href="" class="btn btn-dark">More Info</a>
+          </div>
       </div>
     </div>
 {% endfor %} 
+
+
+{% for discs in data.discography %}
+<ul class="list-unstyled col-sm-6">
+  <li class="media">
+    <img class="mr-3" src="../img/discs/{{ discs.image }}" alt="Generic placeholder image">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">{{ discs.title }}</h5>
+      {{ discs.year }}
+    </div>
+  </li>
+</ul>
+{% endfor %}
 </div>
 </div>
 {% endblock %}   
