--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -15,7 +15,7 @@
     </div>
     <div class="col-sm-5">
       {% block story %}
-      <img src="../img/members/{{ member.image }}">
+      <img src="../img/discs/{{ discs.image }}">
       {% endblock %}
     </div>
   </div>
