--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -5,10 +5,10 @@
   </button>
  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="Freddie-Mercury.html">Freddie Mercury</a>
-      <a class="nav-item nav-link" href="Brian-May.html">Brian May</a>
-      <a class="nav-item nav-link" href="Roger-Taylor.html">Roger Taylor</a>
-      <a class="nav-item nav-link" href="John-Deacon.html">John Deacon</a>
+      <a class="nav-item nav-link" href="freddie-mercury.html">Freddie Mercury</a>
+      <a class="nav-item nav-link" href="brian-may.html">Brian May</a>
+      <a class="nav-item nav-link" href="roger-taylor.html">Roger Taylor</a>
+      <a class="nav-item nav-link" href="john-deacon.html">John Deacon</a>
     </div>
       </li>
     </ul>
