--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -15,7 +15,9 @@
 
       Queen's first album "Queen" was a commercial flop in 1973, failing to chart and producing no hit single, but their second album "Queen II" produced a top ten hit, "Seven Seas of Rhye". It was with the release of "Sheer Heart Attack" in 1974 and "A Night at the Opera" the following year that the band gained international success. They have released fifteen studio albums, five live albums and numerous compilation albums. Since Mercury's death and Deacon's retirement, May and Taylor have performed infrequently together at special events and programs as members of other ensembles. Between 2004 to 2009 the duo collaborated with Paul Rodgers under the moniker Queen + Paul Rodgers, and between 2011 to 2015 with Adam Lambert under the moniker Queen + Adam Lambert. </p>
 
-      <p> Source: IMBD </p>
+      <p> 
+      <a href="https://www.imdb.com/name/nm1277102/bio">Source: IMBD</a> 
+      </p>
   </div>
     </div>
 
@@ -25,9 +27,7 @@
       <img src="../img/members/{{ member.imagebw }}" class="card-img" alt="...">
       <div class="card-img-overlay">
         <h5 class="card-title">{{ member.name }}</h5>
-          <div class ="text-left">
-          <a href="" class="btn btn-dark">More Info</a>
-          </div>
+          <a href="{{ member.url }}" class="btn btn-outline-light float-right">More Info</a>
       </div>
     </div>
 {% endfor %} 
