--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -15,7 +15,7 @@
     </div>
     <div class="col-sm-5">
       {% block story %}
-      <img src="..img/members/{{ members.image }}" class= "img-fluid">
+      <img src="img/members/{{ members.image }}" class= "img-fluid">
       {% endblock %}
     </div>
   </div>
