--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
+    <div class="navbar-nav justify-content-center">
       <a class="nav-item nav-link" href="freddie-mercury.html">Freddie Mercury</a>
       <a class="nav-item nav-link" href="brian-may.html">Brian May</a>
       <a class="nav-item nav-link" href="roger-taylor.html">Roger Taylor</a>
