--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -23,7 +23,7 @@
 
 <div class="row">
   {% for member in data.members %}
-    <div class="card sm-dark text-white w-25">
+    <div class="card sm-dark text-white col-6 offset-sm offset-md offset-lg">
       <img src="img/members/{{ member.imagebw }}" class="card-img" alt="...">
       <div class="card-img-overlay">
         <h5 class="card-title">{{ member.name }}</h5>
