--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -5,12 +5,12 @@
   <div class="row">
     <div class="col-sm-7 left-rail">
       {% block info %}
-      <h1>{{ members.name}}</h1>
-      <h2>{{ members.instruments }}</h2>
-      <h3>{{ members.birthdate }}</h3> 
-      <h4>{{ members.birthplace }}</h4>
+      <h1 class=name>{{ members.name}}</h1>
+      <h2 class= subtitles>{{ members.instruments }}</h2>
+      <h3 class= subtitles>{{ members.birthdate }}</h3> 
+      <h4 class= subtitles>{{ members.birthplace }}</h4>
 
-      <p>{{ members.text | safe}}</p>
+      <p class=text>{{ members.text | safe}}</p>
       {% endblock %}
     </div>
     <div class="col-sm-5">
