--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -3,16 +3,22 @@
 .navbar {
   margin-bottom: 0px;
   background-color: black;
+  width: 100%;
+  height: 115px;
 }
 
 .navbar-brand {
   font-family: 'Syncopate', sans-serif;
   color: white;
+  font-size: 2rem;
 }
 
 .navbar a{
   color: white;
+  justify-content: center;
   }
   .navbar li a{
   color: white;
+  justify-content: center;
   }
+
