--- a/src/scss/_media-list.scss
+++ b/src/scss/_media-list.scss
@@ -1,9 +1,12 @@
 .media {
-padding-top: 30px;
+padding-top: 30%;
   img {
     max-width: 50%;
   }
 
 }
 
+.title {
+  font-family: 'Syncopate', sans-serif;
+}
 
