--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -1,5 +1,19 @@
 .card-title { 
   text-align: right;
+  font-family: 'Syncopate', sans-serif;
 }
 
+.headline {
+  font-family: 'Syncopate', sans-serif;
+}
+
+.card {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.col-sm-6 {
+  padding-left: 0;
+  padding-right: 0;
+}
 
