--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -6,7 +6,13 @@
   width: 100%;
   height: 115px;
 }
-
+.navbar-nav {
+  border:1px solid #ccc;
+  border-width:1px 0;
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
 .navbar-brand {
   font-family: 'Syncopate', sans-serif;
   color: white;
@@ -15,10 +21,12 @@
 
 .navbar a{
   color: white;
-  justify-content: center;
+  display:inline-block;
+  padding:10px;
   }
-  .navbar li a{
+  .navbar li {
   color: white;
-  justify-content: center;
+  display:inline-block;
+  text-align: center;
   }
 
