--- a/src/scss/_media-list.scss
+++ b/src/scss/_media-list.scss
@@ -10,3 +10,11 @@ padding-top: 30%;
   font-family: 'Syncopate', sans-serif;
 }
 
+.discography {
+  padding-bottom: 0;
+  padding-top: 5%;
+  font-family: 'Syncopate', sans-serif;
+  border-bottom: 0;
+  margin-bottom: 0;
+  text-align: center;
+}
