--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -10,6 +10,9 @@
 .card {
   padding-left: 0;
   padding-right: 0;
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .col-sm-6 {
@@ -17,3 +20,16 @@
   padding-right: 0;
 }
 
+.img-fluid {
+  border-radius: 0px 0px 5px 5px;
+  width: 100%;
+}
+
+.information {
+  background-color: #E8E8E8;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+  padding-left: 5%;
+
+}
