--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -19,14 +19,7 @@
   font-size: 2rem;
 }
 
-.navbar a{
+#dropdownMenuButton {
   color: white;
-  display:inline-block;
-  padding:10px;
-  }
-  .navbar li {
-  color: white;
-  display:inline-block;
-  text-align: center;
-  }
+}
 
